force-app/main/default/objects/Routing_Group__c/Routing_Group__c.object-meta.xml
<CustomObject>
  <label>Routing Group</label>
  <pluralLabel>Routing Groups</pluralLabel>
  <nameField>
    <type>Text</type>
    <label>Routing Group Name</label>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>