force-app/main/default/objects/Routing_Group__c/fields/Default_SLA_Hours__c.field-meta.xml
<CustomField>
  <fullName>Default_SLA_Hours__c</fullName>
  <label>Default SLA Hours</label>
  <type>Number</type>
  <precision>3</precision>
  <scale>0</scale>
</CustomField>