force-app/main/default/objects/Routing_Group__c/fields/Distribution_Mode__c.field-meta.xml
<CustomField>
  <fullName>Distribution_Mode__c</fullName>
  <label>Distribution Mode</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value>
        <fullName>Equal</fullName>
        <default>true</default>
      </value>
      <value>
        <fullName>Weighted</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>