force-app/main/default/objects/Routing_Group__c/fields/Fallback_Group__c.field-meta.xml
<CustomField>
  <fullName>Fallback_Group__c</fullName>
  <label>Fallback Group</label>
  <type>Lookup</type>
  <referenceTo>Routing_Group__c</referenceTo>
  <relationshipLabel>Fallback Groups</relationshipLabel>
  <relationshipName>FallbackGroup</relationshipName>
</CustomField>